--- a/TaskManager.Client/Resources/Styles/MainStyle.xaml
+++ b/TaskManager.Client/Resources/Styles/MainStyle.xaml
@@ -44,4 +44,12 @@
             </Style>
         </Style.Resources>
     </Style>
+
+    <Style TargetType="TextBlock" x:Key="commonTBlock">
+        <Setter Property="Height" Value="20"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="FontStyle" Value="{StaticResource commonFontStyle}"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
 </ResourceDictionary>
