--- a/TaskManager.Client/Resources/Styles/MainStyle.xaml
+++ b/TaskManager.Client/Resources/Styles/MainStyle.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Brush x:Key="commonBlueColor">#0696d7</Brush>
     <Brush x:Key="commonRedColor">Red</Brush>
+    <Brush x:Key="commonGrayColor">#FF8D8D8D</Brush>
     <FontStyle x:Key="commonFontStyle">Normal</FontStyle>
 
     <Style TargetType="TextBox" x:Key="commonTBox">
@@ -47,9 +48,15 @@
 
     <Style TargetType="TextBlock" x:Key="commonTBlock">
         <Setter Property="Height" Value="20"/>
-        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="FontSize" Value="14"/>
         <Setter Property="FontStyle" Value="{StaticResource commonFontStyle}"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+
+    <Style TargetType="GridSplitter" x:Key="commonSplitter">
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="{StaticResource commonGrayColor}"/>
+        <Setter Property="Margin" Value="2"/>
     </Style>
 </ResourceDictionary>
