--- a/TaskManager.Client/Resources/Styles/MainStyle.xaml
+++ b/TaskManager.Client/Resources/Styles/MainStyle.xaml
@@ -47,16 +47,23 @@
     </Style>
 
     <Style TargetType="TextBlock" x:Key="commonTBlock">
-        <Setter Property="Height" Value="20"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="FontStyle" Value="{StaticResource commonFontStyle}"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
 
+    <Style TargetType="TextBlock" x:Key="headerTBlock" BasedOn="{StaticResource commonTBlock}">
+        <Setter Property="FontSize" Value="20"/>
+    </Style>
+
     <Style TargetType="GridSplitter" x:Key="commonSplitter">
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="BorderBrush" Value="{StaticResource commonGrayColor}"/>
         <Setter Property="Margin" Value="2"/>
+    </Style>
+
+    <Style TargetType="Border" x:Key="commonBorder">
+        <Setter Property="BorderBrush" Value="{StaticResource commonGrayColor}"/>
     </Style>
 </ResourceDictionary>
